appId: com.rn071
---
- tapOn: clear
- tapOn:
    id: propName
- inputText: ${PROP}
- tapOn:
    id: propValue
- inputText: ${VALUE}
- hideKeyboard
- tapOn:
    id: changeProp
