appId: com.rn071
tags:
  - android
  - displayText
---
- runFlow:
    file: utils/set-timezone.yml
    env:
      REGION: Sweden
      GMT: GMT+01:00
      STATE: ''

- runFlow: utils/launch.yml
# test: minuteInterval rounding should round with floor
- runFlow:
    file: utils/change-prop.yml
    env:
      PROP: minuteInterval
      VALUE: 5
- tapOn: change date
- runFlow:
    file: utils/change-prop-value.yml
    env:
      VALUE: '2000-01-01T00:34:00+01:00'
- runFlow: utils/swipe-wheel-1.yml
- assertVisible: '2000-01-02 00:30:00'

- runFlow: utils/reset.yml

# test: can have initial date in past
- tapOn: clear maximumDate
- tapOn: clear minimumDate
- tapOn: change date
- runFlow:
    file: utils/change-prop-value.yml
    env:
      VALUE: '1999-01-01'
- runFlow: utils/swipe-wheel-1.yml
- assertVisible: '1999-01-02 01:00:00'

- runFlow: utils/reset.yml

- runFlow:
    file: utils/change-locale-and-scroll.yml
    env:
      LOCALE: en-US
      EXPECT: 'Sun Jan 21200 AM '

- runFlow: utils/reset.yml

# test: display text - datetime
- runFlow:
    file: utils/change-locale-and-scroll.yml
    env:
      LOCALE: vi-VN
      EXPECT: 'CN 2 thg 11200 SA '

- runFlow:
    file: utils/change-locale-and-scroll.yml
    env:
      LOCALE: pt-BR
      EXPECT: 'dom. 2 de jan.1200 AM '

# Should be possible to use picker with invalid locale
- runFlow:
    file: utils/change-locale-and-scroll.yml
    env:
      LOCALE: xx
      EXPECT: '2000-01-02 00:00:00'

# If more tests are needed on datetime locale:
# 'sv-SE', 'sön 2 jan.' + '1200 fm '
# 'ru-RU', 'вс 2 янв.' + '1200 AM '
# 'ko', '1월 2일 일 오전 1200'
# 'ja', '1月2日 日' + '1200 午前 '
# 'zh-CH', '1月2日周日 上午 1200'
# 'eu', 'urt. 2 ig.' + ' AM 1200'

# test: display text - date

- tapOn: date mode
- tapOn: clear minimumDate
- tapOn: clear maximumDate

- runFlow:
    file: utils/change-locale-and-scroll.yml
    env:
      LOCALE: en-US
      EXPECT: 'February12000'

- runFlow:
    file: utils/change-locale-and-scroll.yml
    env:
      LOCALE: pt-BR
      EXPECT: '2janeiro2000'

- runFlow:
    file: utils/change-locale-and-scroll.yml
    env:
      LOCALE: zh-CH
      EXPECT: '2001年一月1日'
#
# If more tests are needed for date locale:
# 'sv-SE', '2' + 'januari' + '2000'
# 'ko', '2001년' + '1월' + '1일'
# 'ja', '2001年' + '1月' + '1日'
# 'zh-CH', '2001年' + '一月' + '1日'
# 'eu', '2001' + 'urtarrila' + '1'
