appId: com.rn071
tags:
  - android
  - wheelOrder
---
# test: can use modal

- runFlow: utils/launch.yml
- tapOn: clear maximumDate

# datetime mode
- tapOn: datetime mode

# us
- tapOn: locale en-US

- runFlow: utils/swipe-wheel-1.yml
- assertVisible: '2000-01-02 00:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-2.yml
- assertVisible: '2000-01-01 01:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-3.yml
- assertVisible: '2000-01-01 00:01:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-4.yml
- assertVisible: '2000-01-01 12:00:00'
- tapOn: reset date

# korean
- tapOn: locale ko-KR

- runFlow: utils/swipe-wheel-1.yml
- assertVisible: '2000-01-02 00:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-2.yml
- assertVisible: '2000-01-01 12:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-3.yml
- assertVisible: '2000-01-01 01:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-4.yml
- assertVisible: '2000-01-01 00:01:00'
- tapOn: reset date

# date mode
- tapOn: date mode

# us
- tapOn: locale en-US

- runFlow: utils/swipe-wheel-1.yml
- assertVisible: '2000-02-01 00:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-2.yml
- assertVisible: '2000-01-02 00:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-3.yml
- assertVisible: '2001-01-01 00:00:00'
- tapOn: reset date

# korean
- tapOn: locale ko-KR

- runFlow: utils/swipe-wheel-1.yml
- assertVisible: '2001-01-01 00:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-2.yml
- assertVisible: '2000-02-01 00:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-3.yml
- assertVisible: '2000-01-02 00:00:00'
- tapOn: reset date

# time mode
- tapOn: time mode

# us
- tapOn: locale en-US

- runFlow: utils/swipe-wheel-1.yml
- assertVisible: '2000-01-01 01:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-2.yml
- assertVisible: '2000-01-01 00:01:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-3.yml
- assertVisible: '2000-01-01 12:00:00'
- tapOn: reset date

# korean
- tapOn: locale ko-KR

- runFlow: utils/swipe-wheel-1.yml
- assertVisible: '2000-01-01 12:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-2.yml
- assertVisible: '2000-01-01 01:00:00'
- tapOn: reset date

- runFlow: utils/swipe-wheel-3.yml
- assertVisible: '2000-01-01 00:01:00'
- tapOn: reset date
