appId: com.rn071
tags:
  - ios
---
# test: can use inline picker
- runFlow: utils/launch.yml
- runFlow:
    file: utils/change-prop.yml
    env:
      PROP: locale
      VALUE: vi-VN
- runFlow: utils/swipe-wheel-1-down-ios.yml
- assertVisible:
    text: '2000-01-01 01:00:00'

# test: can use modal
- launchApp
- tapOn: Modal
- tapOn: Select date
- runFlow: utils/swipe-wheel-1-modal.yml
- tapOn: Confirm
- assertVisible:
    text: '2000-01-02'
