appId: com.rn071
tags:
  - modal
---
# test: can use modal

- launchApp
- tapOn: Modal
- tapOn: Select date
- runFlow: utils/swipe-wheel-1.yml
- tapOn: Confirm
- assertVisible:
    text: '2000-01-02'
